ingressgateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: dubboprovider-dubbo-app-ingressgateway
  namespace: istio-system
spec:
  loadBalancerIP: 10.95.153.220     #//绑定的NLB的弹性公网IP
  ports:
  - name: dubbo
    port: 20880       #//dubboprovider的外部访问端口
    protocol: TCP
    targetPort: 20880
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  type: LoadBalancer
